fix module problem for iOS SDK

--- a/examples/androidSDKExample/app/src/main/res/values/strings.xml
+++ b/examples/androidSDKExample/app/src/main/res/values/strings.xml
@@ -47,6 +47,23 @@
     <string name="button_search_hnsw_index">Search</string>
     <string name="button_clear_hnsw_index">Clear</string>
     <string name="button_release_hnsw_index">Release</string>
+    <string name="status_opening_mmap_vector_store">Opening MMapVectorStore...</string>
+    <string name="status_mmap_vector_store_opened">MMapVectorStore opened successfully</string>
+    <string name="status_searching_mmap_vector_store">Searching MMapVectorStore...</string>
+    <string name="status_releasing_mmap_vector_store">Releasing MMapVectorStore...</string>
+    <string name="status_mmap_vector_store_released">MMapVectorStore released successfully</string>
+    <string name="status_please_open_mmap_vector_store_first">Please open a MMapVectorStore first</string>
+    <string name="label_mmap_vector_store">MMapVectorStore (Memory-Mapped Vector Store)</string>
+    <string name="label_mmap_vector_store_status">MMapVectorStore Status</string>
+    <string name="label_mmap_file_path">File Path</string>
+    <string name="label_hnsw_index_status">HNSW Index Status</string>
+    <string name="label_vector_store_status">VectorStore Status</string>
+    <string name="button_open_mmap_vector_store">Open MMapVectorStore</string>
+    <string name="button_search_mmap_vector_store">Search</string>
+    <string name="button_release_mmap_vector_store">Release</string>
+    <string name="button_get_mmap_vector_store_count">Get Count</string>
+    <string name="button_get_mmap_vector_store_dimension">Get Dimension</string>
+    <string name="button_get_mmap_vector_store_metric">Get Metric</string>
     <string name="metric_l2">L2</string>
     <string name="metric_cosine">COSINE</string>
     <string name="metric_dot">DOT</string>
